--- a/src/assets/style/partials/_navbar.scss
+++ b/src/assets/style/partials/_navbar.scss
@@ -27,7 +27,7 @@
 
 .navbar-nav-mobile {
   display: flex;
-  width: 100%;
+  width: 0;
   height: 100vh;
   background: rgba($color: #000, $alpha: 0.5);
   position: absolute;
@@ -35,7 +35,7 @@
   opacity: 0;
   overflow: hidden;
   @include transition;
-  transform: translateX(100%);
+  // transform: translateX(100%);
 
   .menu-mobile {
     width: 48%;
@@ -94,7 +94,8 @@
 // nav mobile animation style
 .show-mobile-nav {
   opacity: 1;
-  transform: translateX(0);
+  // transform: translateX(0);
+  width: 100%;
 }
 
 .animated {
